# a2perp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
a2perp/: manage.py
a2perp/a2perp/: asgi.py  urls.py  utils.py  wsgi.py
a2perp/a2perp/settings/: common.py  conf.sample.py
a2perp/semifinals/: admin.py  auth_pipeline.py  models.py  urls.py  views.py
a2perp/written_exams/: forms.py  models.py  views.py
valentin/: manage.py
valentin/interviews/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
valentin/interviews/migrations/: 0001_initial.py  0002_interviewer_email_notifications.py  0003_auto_20210308_1033.py  0004_auto_20210310_1839.py  0005_auto_20210310_1846.py  0006_auto_20210310_1848.py
valentin/se_forms/: admin.py  apps.py  file_forms.py  mixins.py  models.py  validators.py  views.py
valentin/se_forms/migrations/: 0001_initial.py
valentin/semifinals/: admin.py  apps.py  auth_backends.py  auth_pipeline.py  context_processors.py  models.py  urls.py  views.py
valentin/semifinals/migrations/: 0001_initial.py
valentin/semifinals/templatetags/: semifinals_status.py
valentin/semifinals/tests/: __init__.py  session.py
valentin/valentin/: asgi.py  urls.py  utils.py  wsgi.py
valentin/valentin/settings/: common.py  conf.sample.py
valentin/written_exams/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
valentin/written_exams/migrations/: 0001_initial.py  0002_auto_20210220_0920.py
valentin/written_exams/views/: __init__.py  contestant.py  staff.py
(+40 files in other folders)
